--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ],
-  "plugins": [
-      "@babel/plugin-proposal-object-rest-spread"
-    ]
+  "presets": ["@babel/preset-env"]
 }
